XSS issue fixed; styling; last author not shown in edit mode anymore.

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
     "name": "node-wiki",
     "description": "HTML5 editor powered wiki with drag and drop file upload and easy page creation",
-    "version": "0.0.3",
+    "version": "0.1",
     "scripts": {
         "start": "nodemon -w lib -w models -w routes app.js"
     },
     "repository": {
         "type": "git"
-        , "url": "https://github.com/thomaspeklak/node-wiki"
+        , "url": "https://github.com/kyr0/node-wiki"
     },
     "dependencies": {
         "express": "3.2.x",
@@ -17,7 +17,6 @@
         "async": "*",
         "mkdirp": "0.3.x",
         "request" : "2.2.x",
-        "validator" : "1.1.x",
         "mongoose-version": "0.2.x"
     },
     "devDependencies": {
